Refactor test assertions to use `getFirst()` for improved readability and add null checks for response data.